# svk-validate

./: MANIFEST.in  README.md  pyproject.toml
svk_validate/: cli.py  validate.py  xmo
svk_validate/schemata/erms-3-0-0/: erms_v3_sch_compiled.xsl
svk_validate/schemata/erms-svk-1-0/: ERMS-SVK-ARENDE.sch  ERMS-SVK-ARENDE.xsd  ERMS-SVK-element.xsd  erms_svk_1_0_sch_compiled.xsl
tests/: test_svk_validate.py
